# databricks_dab_citibike

./: .coverage  .coveragerc  .gitignore  README.md  databricks.yml  pyproject.toml  requirements-dbc.txt
.github/workflows/: cd-workflow.yml  ci-workflow.yml
citibike_etl/notebooks/01_bronze/: 01_bronze_citibike.ipynb
citibike_etl/notebooks/02_silver/: 02_silver_citibike.ipynb
citibike_etl/notebooks/03_gold/: 03_gold_citibike_daily_ride_summary.ipynb  03_gold_citibike_daily_station_performance.ipynb
citibike_etl/scripts/01_bronze/: 01_bronze_citibike.py
citibike_etl/scripts/02_silver/: 02_silver_citibike.py
citibike_etl/scripts/03_gold/: 03_gold_citibike_daily_ride_summary.py  03_gold_citibike_daily_station_performance.py
citibike_etl/sdp/01_bronze/: 01_bronze_citibike.ipynb
citibike_etl/sdp/02_silver/: 02_silver_citibike.ipynb
citibike_etl/sdp/03_gold/: 03_gold_citibike_daily_ride_summary.ipynb  03_gold_citibike_daily_station_performance.ipynb
docs/: citibike_project_diagram.drawio  workspace-creation.md
notebooks/: notebook_1.ipynb  notebook_2.ipynb
notebooks/01_bronze/: 01_bronze_citibike.ipynb
notebooks/02_silver/: 02_silver_citibike.ipynb
notebooks/03_gold/: 03_gold_citibike_daily_ride_summary.ipynb  03_gold_citibike_daily_station_performance.ipynb
resources/: citibike_etl_pipeline.sdp.yml  citibike_etl_pipeline_nb.job.yml  citibike_etl_pipeline_py.job.yml  clusters.yml  demo_job.job.yml
scripts/: temp.py
src/dab_project/: main.py
tests/: conftest.py  test_citibike_utils.py  test_datetime_utils.py
