[project]
name = "dab_project"
version = "0.0.1"
authors = [{ name = "sunqmasa@gmail.com" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas==3.0.1",
    "numpy==2.4.2",
    "pyarrow==23.0.1",
    "databricks-sdk==0.94.0",
    "grpcio==1.78.0",
    "grpcio-status==1.78.0",
]

[dependency-groups]
dbc = [
    "databricks-connect==17.3",
]
dev = [
    "pytest==9.0.2",
    "ruff",
    "ipykernel==7.2.0",
    "ipython==9.10.0",
    "debugpy==1.8.20",
]
pyspark = [
    "pyspark==4.0.0",
]

[project.scripts]
main = "dab_project.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
